fixtures/src/invalid/media-overlay-no-property/OEBPS/chapter1_overlay.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Not a SMIL file</title></head>
<body><p>This is not a media overlay</p></body>
</html>